# DconnNet

./: .gitignore  AGENTS.md  README.md  connect_loss.py  lr_update.py  main.py  package-lock.json  pyproject.toml  solver.py  train.py
PROJECT_CONTEXT/: README.md  change_summary.md  distance_map_change_overview.md  future_modification.md  future_research.md  modification.md  testing_notes.md
data_loader/: GetDataset_CHASE.py  GetDataset_CREMI.py  GetDataset_ISIC2018.py  GetDataset_Retouch.py  prepare_retouch_dataset.py  transform.py
metrics/: betti_compute.py  betti_error.py  cal_betti.py  cldice.py
model/: DconnNet.py  attention.py  coarse_direction_grouping.py  gap.py  resnet.py
notebooks/: distance_map_chasedb1.ipynb  distance_map_cremi.ipynb  distance_map_drive.ipynb  distance_map_octa500.ipynb  edge_target_binary_vs_distance.ipynb  result.ipynb  retouch.ipynb  verify_connectivity_5x5_coords.ipynb
scripts/: aggregate_kfold_results.py  aggregate_results.py  chasedb1_multi_train.sh  chasedb1_test_best.sh  chasedb1_train.sh  drive_multi_train.sh  drive_train.sh  eta_monitor.md  eta_monitor.py  gpu_train_process_summary.sh  isic2018_multi_train.sh  isic2018_train.sh  multi_train.sh  octa500_multi_train.sh  octa500_train.sh  prepare_isic2018_npy.py  rebuild_dist_signed_artifacts.py  retouch_cir.sh  retouch_spe.sh  retouch_top.sh  telegram_alert.py  train_launcher.md  train_launcher.sh  train_launcher_from_config.py
src/: __init__.py
tests/: test_aggregate_results.py  test_bilateral_voting_kxk_equivalence.ipynb  test_chase_dataloader_gt_dist_signed.ipynb  (+8 more)
(+48 files in other folders)
