[project]
name = "dconnnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apex>=0.9.10.dev0",
    "autopep8>=2.3.2",
    "autorootcwd>=1.0.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isort>=8.0.1",
    "kaggle>=2.0.1",
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "pandas>=3.0.2",
    "pillow>=10.0.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "simpleitk>=2.5.3",
    "tensorboard>=2.20.0",
    "torch==2.11.0+cu128",
    "torchsummary>=1.5.1",
    "torchvision==0.26.0+cu128",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
